# AI-Decision-Audit-Log

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  PRD.md  README.md  pyproject.toml
.cursor/: activity_log.md  architecture.md  changelog.md  instructions.md  roadmap.md
.streamlit/: config.toml
dashboard/: app.py  index.html  server.py
docs/: POC_PLAYBOOK.md  dashboard-design.md
docs/assets/: dashboard-mockup.html
scripts/: run_incidents.py  sample_incidents.json
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  agent.py
src/audit/: __init__.py  logger.py
src/db/: __init__.py  connection.py  query.py  schema.py
tests/: __init__.py  conftest.py
tests/integration/: test_agent.py
tests/unit/: test_audit_logger.py  test_config.py  test_connection.py  test_log_entry.py  test_main.py  test_query.py  test_schema.py
